--- a/mfe1/angular.json
+++ b/mfe1/angular.json
@@ -59,12 +59,16 @@
               "deployUrl": "/mfe1/latest/"
 						},
 						"development": {
-							"buildOptimizer": false,
-							"optimization": false,
-							"vendorChunk": true,
-							"extractLicenses": false,
-							"sourceMap": true,
-							"namedChunks": true
+              "optimization": false,
+              "outputHashing": "none",
+              "sourceMap": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": false,
+              "statsJson": false,
+              "progress": false,
+              "vendorChunk": true,
+              "buildOptimizer": false
 						}
 					},
 					"defaultConfiguration": "production"
